2008-02-19  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/forcefield.cpp (LineSearch): Check gradients with isfinite()
	and for overly-large movements. Prevents any possible "explosions"
	or "disappearing atoms."

2008-02-17  Marcus D. Hanwell  <marcus@cryos.org>

	* src/formats/gausscubeformat.cpp: Rewrote the Gaussian cube format to
	use OpenBabel functions and data structures. Adding error checking and
	also reordered the grid data from the Gaussian order to the internal
	GridData order. Orbitals are now visible in Avogadro - success!

2008-02-16  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/mol.cpp: Removed check in AddHydrogens() to make sure hydrogens
	are added to molecules with no bonds. This check was probably put in
	to make sure you don't add hydrogens to a molecule comming from a QM
	program for which ConnectTheDots() was not called yet? 

2008-02-14  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/msiformat.cpp: Add new support for MSI/Accelrys
	Cerius II files. Still needs a bit of debugging, but works fine on
	single-molecule files.

	* src/formats/Makefile.*: Update for new format.

2008-02-13 Chris Morley
	
	* data/plugindefines.txt: comment out problematic entry
	
	* windows-vc2005/Distribution/NSISScriptToCreateInstallerOBF.nsi:
	update this installer for the multiple DLL build
	
	Update other Windows build files.

2008-02-13  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/griddata.cpp, include/openbabel/griddata.h: Fix for
	documentation (and code) for GetOriginVector -- return the minimum
	x, y, and z coordinates from the grid.

2008-02-12 Chris Morley

	* src/formats/MCDLFormat.cpp: NEW FILE Converted from his Java code
	by Sergey Trepalin. There is a Java applet viewer and editor for
	this linear format at http://sourceforge.net/projects/mcdl.
	Some of the utility functions have been temporarily shoe-horned
	into this file so there is only one MCDL related file. They will be